# atmega16a-arduino-cmake

./: CMakeLists.txt  README.md  config.cmake
cmake/: avr-arduino-toolchain.cmake
lib/suart/: CMakeLists.txt
lib/uart/: CMakeLists.txt  uart.c  uart.h
sketches/blink/: blink.cpp
sketches/esp8266wifi-example/: CMakeLists.txt  ESP8266_library_test.cpp
sketches/esp8266wifi-tcp-client/: CMakeLists.txt
sketches/irdecode/: CMakeLists.txt
sketches/irsamsungtvoff/: CMakeLists.txt  irtvoff.cpp
sketches/powersave/: CMakeLists.txt  powersave.cpp
sketches/powersave2/: CMakeLists.txt  powersave2.cpp
src/accel/: CMakeLists.txt
src/adc/: CMakeLists.txt
src/chatbot/: CMakeLists.txt
src/hacklace/: CMakeLists.txt
src/morse/: CMakeLists.txt
src/oled/: CMakeLists.txt
src/pir/: CMakeLists.txt
src/rgb-sensor/: CMakeLists.txt
src/serial/: CMakeLists.txt
src/touch-sensor/: CMakeLists.txt
src/twitest/: CMakeLists.txt
